项目初始化02

--- a/dreamland-admin/src/main/resources/application.yml
+++ b/dreamland-admin/src/main/resources/application.yml
@@ -32,6 +32,15 @@ spring:
   devtools:
     restart:
       enabled: true
+  #datasource:
+  #  url: jdbc:mysql://148.70.186.70:3306/dreamland_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true
+   # username: root
+   # password: root@123!@#
+
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/dreamland_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    username: fanl
+    password: fanl@0920
 
 mybatis:
   typeAliasesPackage: com.fanling.dreamland.domain
@@ -47,8 +56,11 @@ pagehelper:
 shiro:
   user:
     indexUrl: /index
+    loginUrl: /login
+    unauthorizedUrl: /unauth
   cookie:
     domain:
+    path: /
   session:
     dbSyncPeriod: 1
 
