--- a/dreamland-admin/src/main/resources/application.yml
+++ b/dreamland-admin/src/main/resources/application.yml
@@ -34,8 +34,8 @@ spring:
       enabled: true
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/dreamland_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
-    username: fanl
-    password: fanl@0920
+    username: root
+    password: root@12345
 
 mybatis:
   typeAliasesPackage: com.fanling.dreamland.domain
