--- a/dreamland-admin/pom.xml
+++ b/dreamland-admin/pom.xml
@@ -14,33 +14,21 @@
         <version>2.1.6.RELEASE</version>
         <relativePath/>
     </parent>
-    <!--
-      系统模块代码参考
-      https://gitee.com/y_project/RuoYi-fast
-      区别
-      1. 前端是layui
-      2. 优化了部分代码
 
-      APP系统管理单应用
-      -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <shiro.version>1.4.0</shiro.version>
+        <shiro.version>1.4.1</shiro.version>
         <thymeleaf.extras.shiro.version>2.0.0</thymeleaf.extras.shiro.version>
-        <mybatis.spring.boot.starter.version>1.3.2</mybatis.spring.boot.starter.version>
-        <pagehelper.spring.boot.starter.version>1.2.5</pagehelper.spring.boot.starter.version>
-        <fastjson.version>1.2.47</fastjson.version>
-        <druid.version>1.1.14</druid.version>
-        <commons.io.version>2.5</commons.io.version>
-        <commons.fileupload.version>1.3.3</commons.fileupload.version>
-        <bitwalker.version>1.19</bitwalker.version>
+        <mybatis.spring.boot.starter.version>2.0.1</mybatis.spring.boot.starter.version>
+        <pagehelper.spring.boot.starter.version>1.2.12</pagehelper.spring.boot.starter.version>
+        <fastjson.version>1.2.58</fastjson.version>
+        <commons.io.version>2.6</commons.io.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
+        <bitwalker.version>1.21</bitwalker.version>
         <lombok.version>1.18.8</lombok.version>
-        <velocity.version>1.7</velocity.version>
-        <swagger.version>2.9.2</swagger.version>
-        <jsoup.version>1.11.3</jsoup.version>
-        <oshi.version>3.9.1</oshi.version>
+        <jsoup.version>1.12.1</jsoup.version>
     </properties>
 
     <dependencies>
@@ -80,12 +68,7 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional> <!-- 表示依赖不会传递 -->
         </dependency>
-        <!-- HTML解析器 -->
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>${jsoup.version}</version>
-        </dependency>
+
         <!-- Mysql驱动包 -->
         <dependency>
             <groupId>mysql</groupId>
@@ -112,20 +95,32 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>${pagehelper.spring.boot.starter.version}</version>
         </dependency>
+
+        <!-- HTML解析器 -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons.io.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
             <version>${shiro.version}</version>
         </dependency>
+
         <!-- Shiro使用Srping框架 -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
@@ -155,44 +150,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <fork>true</fork>
-                </configuration>
-            </plugin>
-            <!-- docker -->
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>1.2.0</version>
-                <!--将插件绑定在某个phase执行-->
-                <executions>
-                    <execution>
-                        <id>build-image</id>
-                        <!--将插件绑定在package这个phase上。也就是说，用户只需执行mvn package ，就会自动执行mvn docker:build-->
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <!-- 这里是最终生成的docker镜像名称 -->
-                    <imageName>fl0920/${project.artifactId}</imageName>
-                    <!--指定标签-->
-                    <imageTags>
-                        <imageTag>latest</imageTag>
-                    </imageTags>
-                    <!-- 指定 Dockerfile 路径-->
-                    <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
-                    <!--指定远程 docker api地址-->
-                    <dockerHost>http://148.70.186.70:2375</dockerHost>
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <!--jar 包所在的路径  此处配置的 即对应 target 目录-->
-                            <directory>${project.build.directory}</directory>
-                            <!-- 需要包含的 jar包 ，这里对应的是 Dockerfile中添加的文件名　-->
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
                 </configuration>
             </plugin>
         </plugins>
