--- a/dreamland-manager/dreamland-project/pom.xml
+++ b/dreamland-manager/dreamland-project/pom.xml
@@ -17,6 +17,12 @@
             <groupId>com.fanling.dreamland</groupId>
             <artifactId>dreamland-common</artifactId>
         </dependency>
+
+        <!-- 简化代码插件 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
