--- a/dreamland-admin/dreamland-system-api/pom.xml
+++ b/dreamland-admin/dreamland-system-api/pom.xml
@@ -42,10 +42,15 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional> <!-- 表示依赖不会传递 -->
         </dependency>
-        <!-- 核心包 -->
+        <!--Shiro核心框架 -->
         <dependency>
-            <groupId>com.fanling.dreamland</groupId>
-            <artifactId>dreamland-core</artifactId>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+        </dependency>
+        <!-- Shiro使用Srping框架 -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
         </dependency>
         <!--jwt-->
         <dependency>
