--- a/dreamland-resources/dreamland-system-service/pom.xml
+++ b/dreamland-resources/dreamland-system-service/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>dreamland-system-service</artifactId>
 
-
+    <dependencies>
+        <!-- 通用包 -->
+        <dependency>
+            <groupId>com.fanling.dreamland</groupId>
+            <artifactId>dreamland-base-common</artifactId>
+        </dependency>
+        <!-- mybatis-spring-boot -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
