--- a/dreamland-resources/pom.xml
+++ b/dreamland-resources/pom.xml
@@ -13,14 +13,17 @@
         <module>dreamland-module-service</module>
         <module>dreamland-base-common</module>
         <module>dreamland-system-service</module>
+        <module>dreamland-system-api</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <jwt.version>3.8.1</jwt.version>
         <spring.version>5.1.8.RELEASE</spring.version>
         <lombok.version>1.18.8</lombok.version>
         <swagger2.version>2.9.2</swagger2.version>
+        <swagger-bootstrap-ui.version>1.9.4</swagger-bootstrap-ui.version>
         <shiro.hash.version>1.4.1</shiro.hash.version>
         <feign.version>1.4.7.RELEASE</feign.version>
         <pagehelper.version>1.2.12</pagehelper.version>
@@ -55,6 +58,12 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <!--jwt-->
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>${jwt.version}</version>
+            </dependency>
             <!-- feign -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -88,6 +97,11 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>${swagger-bootstrap-ui.version}</version>
             </dependency>
             <!-- ######################项目工程包###################### -->
             <!-- 通用包 -->
