--- a/dreamland-support/pom.xml
+++ b/dreamland-support/pom.xml
@@ -6,11 +6,20 @@
 
     <groupId>com.fanling.dreamland</groupId>
     <artifactId>dreamland-support</artifactId>
+    <packaging>pom</packaging>
     <version>2.0.0</version>
+
+    <modules>
+        <module>dreamland-gateway</module>
+        <module>dreamland-eureka</module>
+    </modules>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <swagger2.version>2.9.2</swagger2.version>
+        <swagger-bootstrap-ui.version>1.9.4</swagger-bootstrap-ui.version>
         <spring.boot.verison>2.1.6.RELEASE</spring.boot.verison>
         <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
     </properties>
@@ -32,7 +41,24 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- swagger2 -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>${swagger-bootstrap-ui.version}</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <build>
