--- a/dreamland-resources/dreamland-common/pom.xml
+++ b/dreamland-resources/dreamland-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dreamland-base-common</artifactId>
+    <artifactId>dreamland-common</artifactId>
 
     <dependencies>
         <!-- lombok -->
