--- a/dreamland-resources/dreamland-gateway/src/main/resources/application-dev.yml
+++ b/dreamland-resources/dreamland-gateway/src/main/resources/application-dev.yml
@@ -5,6 +5,10 @@ spring:
     active: dev
   application:
     name: geteway-service
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/dreamland_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    username: root
+    password: root@12345
 zuul:
   routes:
     system-service:
