架构调整，添加商品中心，订单中心

--- a/dreamland-resources/dreamland-gateway/src/main/resources/application-dev.yml
+++ b/dreamland-resources/dreamland-gateway/src/main/resources/application-dev.yml
@@ -15,8 +15,8 @@ zuul:
       path: /system-service/**
       serviceId: system-service
     module-service:
-      path: /module-service/**
-      serviceId: module-service
+      path: /auth-service/**
+      serviceId: auth-service
 eureka:
   client:
     fetch-registry: true       #发现服务
