--- a/dreamland-resources/dreamland-auth-api/src/main/resources/application-dev.yml
+++ b/dreamland-resources/dreamland-auth-api/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ server:
 
 spring:
   profiles:
-    active: test
+    active: dev
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
@@ -16,11 +16,11 @@ spring:
       max-file-size:  10MB
       max-request-size:  20MB
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/dreamland?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://127.0.0.1:3306/dreamland_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
     username: root
     password: root@12345
   application:
-    name: system-service
+    name: auth-service
   main:
     allow-bean-definition-overriding: true
   redis:
@@ -39,7 +39,7 @@ logging:
   level:
     com.fanling.dreamland: debug
     org.springframework: warn
-  file: D:/logs/dreamland/module-service/wraper.log
+  file: D:/logs/dreamland/auth-service/wraper.log
 
 mybatis:
   typeAliasesPackage: com.fanling.dreamland.entity
