--- a/dreamland-resources/dreamland-goods-api/pom.xml
+++ b/dreamland-resources/dreamland-goods-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dreamland-module-api</artifactId>
+    <artifactId>dreamland-goods-api</artifactId>
 
     <dependencies>
         <!-- web -->
@@ -21,11 +21,6 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <!-- jwt -->
-        <dependency>
-            <groupId>com.auth0</groupId>
-            <artifactId>java-jwt</artifactId>
         </dependency>
         <!-- redis -->
         <dependency>
@@ -61,4 +56,5 @@
             <artifactId>dreamland-common</artifactId>
         </dependency>
     </dependencies>
+
 </project>
