--- a/dreamland-resources/pom.xml
+++ b/dreamland-resources/pom.xml
@@ -9,11 +9,13 @@
     <packaging>pom</packaging>
     <version>2.0.0</version>
     <modules>
-        <module>dreamland-module-api</module>
+        <module>dreamland-auth-api</module>
         <module>dreamland-common</module>
         <module>dreamland-system-api</module>
         <module>dreamland-eureka</module>
         <module>dreamland-gateway</module>
+        <module>dreamland-goods-api</module>
+        <module>dreamland-order-api</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
