--- a/dreamland-eureka/src/main/resources/application-dev.yml
+++ b/dreamland-eureka/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: eureka-service
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/dreamland_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://127.0.0.1:3306/dreamland_eureka_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
     username: root
     password: root@12345
 
