--- a/dreamland-resources/dreamland-auth-api/src/main/resources/application-dev.yml
+++ b/dreamland-resources/dreamland-auth-api/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
       max-file-size:  10MB
       max-request-size:  20MB
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/dreamland_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://localhost:3306/dreamland_auth_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
     username: root
     password: root@12345
   application:
@@ -33,7 +33,7 @@ eureka:
 
 logging:
   level:
-    com.fanling.dreamland: debug
+    com.fanling.dreamland: info
     org.springframework: warn
   file: D:/logs/dreamland/auth-service/wraper.log
 
