--- a/dreamland-resources/pom.xml
+++ b/dreamland-resources/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>dreamland-auth-api</module>
         <module>dreamland-order-api</module>
+        <module>dreamland-attachment-api</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
