--- a/dreamland-resources/dreamland-service-api/src/main/resources/application-prod.yml
+++ b/dreamland-resources/dreamland-service-api/src/main/resources/application-prod.yml
@@ -35,7 +35,7 @@ eureka:
 
 logging:
   level:
-    com.fanling.dreamland: debug
+    com.fanling.dreamland: info
     org.springframework: warn
   file: /opt/modules/logs/dreamland/service-api/wraper.log
 
