--- a/dreamland-resources/dreamland-auth-api/src/main/resources/application-prod.yml
+++ b/dreamland-resources/dreamland-auth-api/src/main/resources/application-prod.yml
@@ -31,9 +31,13 @@ eureka:
     service-url:
       defaultZone: http://localhost:7000/eureka/
 
+feign:
+  hystrix:
+    enabled: true # 开启Feign熔断
+
 logging:
   level:
-    com.fanling.dreamland: debug
+    com.fanling.dreamland: info
     org.springframework: warn
   file: /opt/modules/logs/dreamland/auth-api/wraper.log
 
