--- a/dreamland-resources/dreamland-service-api/src/main/resources/application-dev.yml
+++ b/dreamland-resources/dreamland-service-api/src/main/resources/application-dev.yml
@@ -34,7 +34,7 @@ eureka:
 
 logging:
   level:
-    com.fanling.dreamland: debug
+    com.fanling.dreamland: info
     org.springframework: warn
   file: D:/logs/dreamland/service-api/wraper.log
 
