--- a/dreamland-resources/dreamland-attachment-api/src/main/resources/application-dev.yml
+++ b/dreamland-resources/dreamland-attachment-api/src/main/resources/application-dev.yml
@@ -6,15 +6,15 @@ server:
     min-spare-threads: 30
 
 spring:
+  http:
+    multipart:
+      maxFileSize: 10M
+      maxRequestSize: 20M
   profiles:
     active: dev
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
-  servlet:
-    multipart:
-      max-file-size:  10MB
-      max-request-size:  20MB
   datasource:
     url: jdbc:mysql://localhost:3306/dreamland_attachment_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
     username: root
@@ -32,7 +32,7 @@ eureka:
 
 logging:
   level:
-    com.fanling.dreamland: debug
+    com.fanling.dreamland: info
     org.springframework: warn
   file: D:/logs/dreamland/attachment-api/wraper.log
 
