--- a/dreamland-eureka/src/main/resources/application-dev.yml
+++ b/dreamland-eureka/src/main/resources/application-dev.yml
@@ -30,6 +30,6 @@ eureka:
   #项目日志
 logging:
   level:
-    com.fanling.dreamland: debug
+    com.fanling.dreamland: info
     org.springframework: warn
   file: D:/logs/dreamland/eureka-service/wraper.log
