--- a/dreamland-resources/dreamland-auth-api/src/main/resources/application-dev.yml
+++ b/dreamland-resources/dreamland-auth-api/src/main/resources/application-dev.yml
@@ -25,6 +25,8 @@ spring:
     host: 127.0.0.1
 
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     fetch-registry: true       #发现服务
     register-with-eureka: true #注册服务
