--- a/dreamland-gateway-7001/src/main/resources/application-prod.yml
+++ b/dreamland-gateway-7001/src/main/resources/application-prod.yml
@@ -27,6 +27,10 @@ zuul:
     connect-timeout-millis: 15000         #HTTP连接超时要比Hystrix的大
     socket-timeout-millis: 60000          #socket超时
 
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+
 eureka:
   client:
     fetch-registry: true       #发现服务
