--- a/dreamland-facade-entity/pom.xml
+++ b/dreamland-facade-entity/pom.xml
@@ -10,8 +10,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <fanl-common.version>1.0.0</fanl-common.version>
         <lombok.version>1.18.8</lombok.version>
+        <fanl.common.version>1.0.0</fanl.common.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <!-- 代码简化lombok -->
@@ -25,8 +26,21 @@
         <dependency>
             <groupId>com.fanling</groupId>
             <artifactId>fanl-common</artifactId>
-            <version>${fanl-common.version}</version>
+            <version>${fanl.common.version}</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <!-- maven编译插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
