--- a/dreamland-facade-parent/dreamland-gateway-7001/pom.xml
+++ b/dreamland-facade-parent/dreamland-gateway-7001/pom.xml
@@ -46,5 +46,21 @@
             <artifactId>fastjson</artifactId>
         </dependency>
     </dependencies>
-
+    <build>
+        <finalName>${artifactId}</finalName>
+        <plugins>
+            <!-- spring boot 打包插件 -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
