--- a/dreamland-facade-parent/dreamland-attachment-api-7006/src/main/resources/application-dev.yml
+++ b/dreamland-facade-parent/dreamland-attachment-api-7006/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
   datasource:
-    url: jdbc:mysql://localhost:3306/dreamland_attachment_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://localhost:3306/dreamland_attachment_test?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: root@12345
   application:
