--- a/dreamland-facade-parent/dreamland-attachment-api-7006/src/main/resources/application-prod.yml
+++ b/dreamland-facade-parent/dreamland-attachment-api-7006/src/main/resources/application-prod.yml
@@ -12,7 +12,7 @@ spring:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
   datasource:
-    url: jdbc:mysql://172.30.0.4:3306/dreamland_attachment?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://172.30.0.4:3306/dreamland_attachment?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: docker
     password: docker@12345
   application:
