--- a/dreamland-facade-parent/dreamland-gateway-7001/src/main/resources/application-dev.yml
+++ b/dreamland-facade-parent/dreamland-gateway-7001/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: gateway
   datasource:
-    url: jdbc:mysql://localhost:3306/dreamland_gateway_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://localhost:3306/dreamland_gateway_test?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: root@12345
   redis:
