--- a/dreamland-facade-parent/dreamland-module-api-7005/src/main/resources/application-dev.yml
+++ b/dreamland-facade-parent/dreamland-module-api-7005/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
       max-file-size:  10MB
       max-request-size:  20MB
   datasource:
-    url: jdbc:mysql://localhost:3306/dreamland_service_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://localhost:3306/dreamland_service_test?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: root@12345
   application:
@@ -25,6 +25,10 @@ spring:
     host: 127.0.0.1
   main:
     allow-bean-definition-overriding: true
+
+feign:
+  hystrix:
+    enabled: true # 开启Feign熔断
 
 eureka:
   instance:
