--- a/dreamland-facade-parent/dreamland-shop-api-7002/src/main/resources/application-dev.yml
+++ b/dreamland-facade-parent/dreamland-shop-api-7002/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
       max-file-size:  10MB
       max-request-size:  20MB
   datasource:
-    url: jdbc:mysql://localhost:3306/dreamland_shop_test?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://localhost:3306/dreamland_shop_test?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: root@12345
   application:
